codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__security_setup_tests__security_setup_after_cutoff.snap
---
source: tui/src/chatwidget/tests/security_setup_tests.rs
assertion_line: 132
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 48))"
---
 Elpis · model test-model-a default · location /

  Set up security for Daybreak mode
  Set up Advanced Account Security with a
  hardware security key. Already Persona-
  verified? Add your key before October 15 to
  skip re-verification. You can keep using
  Elpis while you finish setup.

› 1. Set up security

  Press a number to choose · esc to dismiss ·
  type to continue
│
› Ask Elpis to do anything
│
        100% context left · Tab Context Ledger
