codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__security_setup_tests__security_setup_dismissed_after_usage.snap
---
source: tui/src/chatwidget/tests/security_setup_tests.rs
expression: rendered
---
 Elpis · model test-model-a default · location /tmp/project
┌────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                           │
└────────────────────────────────────────────────────────────────────┘
  ? for shortcuts             100% context left · Tab Context Ledger
